[build-system]
requires = ["setuptools>=61.0", "ruamel.yaml", "colorama"]
build-backend = "setuptools.build_meta"

[project]
name = "yaml-kit"
version = "0.0.2"
authors = [
  { name="Jake Vasilakes", email="jvasialkes@gmail.com" },
]
description = "A package for creating and modifying YAML files."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "colorama",
  "ruamel.yaml",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/jvasilakes/experiment-config"
